NeutToRooTracker.exe will now output to a flat rooTracker format as default, this is to minimise code differences between reading in NEUT and GENIE rooTracker trees.
N.B. NeutToRooTracker.exe will still only transcribe the
StdHep variables correctly.

makefile and setup.sh have been tweaked to make deployment
slightly more straightforward.

--- a/luke-contrib/generators/neut/neut2rootracker/makefile
+++ b/luke-contrib/generators/neut/neut2rootracker/makefile
@@ -11,7 +11,7 @@ TOBJSO := $(TOBJS:.cxx=.so)
 TARGET := NeutToRooTracker.exe
 TARGETSRC := $(TARGET:.exe=.cxx)
 
-NEUTCLASSDIR := ../../neutclass
+NEUTCLASSDIR := $(NEUTCLASSLOC)
 NEUTDEPSO := neutvect.so neutpart.so neutfsipart.so neutfsivert.so neutvtx.so
 
 ROOTCFLAGS := `$(RC) --cflags`
