Fixes a number of bugs relating to not properly resetting objects between entries.
    Adds PionProductionTransversity objects to output tree
    Separates some util funtions into their own header.
    Adds a few minimal unit tests that will hopefully be expanded.

--- a/luke-contrib/transverse-variable-tree-generation/all/makefile
+++ b/luke-contrib/transverse-variable-tree-generation/all/makefile
@@ -4,12 +4,13 @@ RC := root-config
 
 TOBJS := TransversityVariableObjects.cxx
 TOBJH := $(TOBJS:.cxx=.hxx)
+UTILHEADER := TransversityUtils.hxx
 TOBJDICTS := $(TOBJS:.cxx=_dict.cxx)
 TDICTHEADERS := $(TOBJS:.cxx=_dict.h)
 TOBJLINKDEFS := $(TOBJS:.cxx=_linkdef.h)
 TOBJSO := $(TOBJS:.cxx=.so)
 
-TARGET := ProcessRootrackerToTransversityVariables.exe
+TARGET := ProcessRooTrackerToTransversityVariables.exe
 TARGETSRC := $(TARGET:.exe=.cxx)
 
 ROOTCFLAGS := `$(RC) --cflags`
@@ -20,19 +21,23 @@ LDFLAGS := $(ROOTLDFLAGS) -Wl,-rpath=.
 
 .PHONY: all clean
 
-all: $(TARGET)
+all: $(TARGET) tests
+	TransversityTests.exe
 	@echo ""
 	@echo "*********************************************************************"
 	@echo "Success. Note you will need to run me from here or add this directory"
 	@echo "to your LD_LIBRARY_PATH."
 	@echo "*********************************************************************"
 
-$(TARGET): $(TARGETSRC) $(TOBJSO)
+tests: TransversityUnitTests.cxx $(UTILHEADER)
+	$(CXX) -o TransversityTests.exe $(CXXFLAGS) $(LDFLAGS) TransversityUnitTests.cxx
+
+$(TARGET): $(TARGETSRC) $(TOBJSO) $(UTILHEADER)
 	$(CXX) -o $@ -I$(NEUTCLASSDIR) $(CXXFLAGS) $(LDFLAGS) $^
 
 TransversityVariableObjects_dict.cxx: TransversityVariableObjects.hxx
 
-TransversityVariableObjects.so: TransversityVariableObjects.cxx TransversityVariableObjects.hxx TransversityVariableObjects_linkdef.h
+TransversityVariableObjects.so: TransversityVariableObjects.cxx TransversityVariableObjects.hxx TransversityVariableObjects_linkdef.h $(UTILHEADER)
 	$(RCINT) -f TransversityVariableObjects_dict.cxx -c -p TransversityVariableObjects.hxx TransversityVariableObjects_linkdef.h
 	$(CXX) $(CXXFLAGS) -shared TransversityVariableObjects.cxx TransversityVariableObjects_dict.cxx -o $@
 
