Adds -Wall to all CXXFLAGS in subdir makefiles.

--- a/luke-contrib/generators/GiBUU/makefile
+++ b/luke-contrib/generators/GiBUU/makefile
@@ -14,7 +14,7 @@ TOBJH := $(TOBJS:.cxx=.hxx)
 ROOTCFLAGS := `$(RC) --cflags`
 ROOTLDFLAGS := `$(RC) --libs --glibs`
 
-CXXFLAGS := -fPIC $(ROOTCFLAGS) -g -std=c++11
+CXXFLAGS := -fPIC $(ROOTCFLAGS) -g -std=c++11 -Wall
 LDFLAGS := $(ROOTLDFLAGS) -Wl,-rpath=.
 
 UTILSLOC :=../../utils
