Splits up the selections into a separate file and adds plotting to directories.
  Also adds a, probably buggy, simpler caching layer whereby you can ask for
  histo by gen,tar,sel and it will get it or draw it for you.

--- a/luke-contrib/plotting/makefile
+++ b/luke-contrib/plotting/makefile
@@ -5,7 +5,7 @@ RC := root-config
 BDIR :=bin
 LDIR :=lib
 
-TOBJS := PlottingUtils.cxx PlottingIO.cxx
+TOBJS := PlottingUtils.cxx PlottingIO.cxx PlottingSelections.cxx
 TOBJH := $(TOBJS:.cxx=.hxx)
 TOBJH += PlottingTypes.hxx
 TOBJSO := $(TOBJS:.cxx=.so)
@@ -28,7 +28,7 @@ all: $(TARGET)
 	@echo "*********************************************************************"
 	mkdir -p $(BDIR) $(LDIR)
 	mv $(TARGET) $(BDIR)/
-	mv PlottingUtils.so PlottingIO.so $(LDIR)/
+	mv PlottingUtils.so PlottingIO.so PlottingSelections.so $(LDIR)/
 
 $(TARGET): $(TARGETSRC) $(TOBJSO) $(TOBJH)
 	$(CXX) -o $@ $(CXXFLAGS) $(LDFLAGS) $(TARGETSRC) $(TOBJSO)
@@ -37,7 +37,8 @@ PlottingUtils.so: PlottingUtils.cxx PlottingUtils.hxx PlottingTypes.hxx
 	$(CXX) $(CXXFLAGS) -shared PlottingUtils.cxx -o $@
 PlottingIO.so: PlottingIO.cxx PlottingIO.hxx PlottingTypes.hxx PlottingUtils.hxx
 	$(CXX) $(CXXFLAGS) -shared PlottingIO.cxx -o $@
-
+PlottingSelections.so: PlottingSelections.cxx PlottingSelections.hxx
+	$(CXX) $(CXXFLAGS) -shared PlottingSelections.cxx -o $@
 clean:
 	rm -rf $(TOBJSO)\
         $(TARGET)\
