Removes GiBUUToStdHep and associated scripts.
  This code has been moved to a separate repo.

--- a/luke-contrib/makefile
+++ b/luke-contrib/makefile
@@ -1,8 +1,8 @@
 
-.PHONY: cpp11test.exe utils Neut2RooTracker GiBUUToStdHep\
+.PHONY: cpp11test.exe utils Neut2RooTracker\
  plotting ProcessRooTrackerToTransversityVariables
 
-all: cpp11test.exe utils Neut2RooTracker GiBUUToStdHep\
+all: cpp11test.exe utils Neut2RooTracker\
 	ProcessRooTrackerToTransversityVariables
 	@echo ""
 	@echo "*********************************************************************"
@@ -11,7 +11,7 @@ all: cpp11test.exe utils Neut2RooTracker GiBUUToStdHep\
 	@echo "LD_LIBRARY_PATH"
 	@echo "*********************************************************************"
 
-clean: utils_clean Neut2RooTracker_clean GiBUUToStdHep_clean\
+clean: utils_clean Neut2RooTracker_clean\
  ProcessRooTrackerToTransversityVariables_clean
 
 cpp11test.exe:
@@ -23,8 +23,6 @@ utils:
 	cd utils && $(MAKE)
 Neut2RooTracker: utils
 	cd generators/neut/neut2rootracker && $(MAKE)
-GiBUUToStdHep: utils
-	cd generators/GiBUU/GiBUUToStdHep && $(MAKE)
 plotting:
 	cd plotting && $(MAKE)
 ProcessRooTrackerToTransversityVariables: utils
@@ -34,8 +32,6 @@ utils_clean:
 	cd utils && $(MAKE) clean
 Neut2RooTracker_clean:
 	cd generators/neut/neut2rootracker && $(MAKE) clean
-GiBUUToStdHep_clean:
-	cd generators/GiBUU/GiBUUToStdHep && $(MAKE) clean
 plotting_clean:
 	cd plotting && $(MAKE) clean
 ProcessRooTrackerToTransversityVariables_clean:
