Removes Pion specific output tree. Cleans up TransversityVariableObjects
  * Changes many data member names to be more intuitive and consistent.
  * Moves some generic functions to TransversityUtils
  * makefile is now a lot less silly. Uses object files instead of shared
    objects for most translation units. Fixes a few broken dependencies.
  * Updates ProcessRooTrackerToTransversityVariables.cxx accordingly.

--- a/luke-contrib/transverse-variable-tree-generation/all/makefile
+++ b/luke-contrib/transverse-variable-tree-generation/all/makefile
@@ -7,10 +7,10 @@ LDIR :=lib
 
 TOBJS := TransversityVariableObjects.cxx TransversityUtils.cxx
 TOBJH := $(TOBJS:.cxx=.hxx)
-TOBJDICTS := $(TOBJS:.cxx=_dict.cxx)
-TDICTHEADERS := $(TOBJS:.cxx=_dict.h)
-TOBJLINKDEFS := $(TOBJS:.cxx=_linkdef.h)
-TOBJSO := $(TOBJS:.cxx=.so)
+TOBJDICTS := TransversityVariableObjects_dict.cxx
+TDICTHEADERS := TransversityVariableObjects_dict.h
+TOBJO := $(TOBJS:.cxx=.o)
+TOBJO += TransversityVariableObjects_dict.o
 
 UTILSLOC=../../utils
 UTILSDEPSO=libPureGenUtils.so
@@ -30,7 +30,7 @@ all: $(TARGET) tests
 	./TransversityTests.exe
 	mkdir -p $(BDIR) $(LDIR)
 	mv $(TARGET) $(BDIR)/
-	mv $(UTILSDEPSO) $(TOBJSO) $(LDIR)/
+	mv $(UTILSDEPSO) $(LDIR)/
 	@echo ""
 	@echo "*********************************************************************"
 	@echo "Success. Built ProcessRooTrackerToTransversityVariables."
@@ -39,25 +39,26 @@ all: $(TARGET) tests
 $(UTILSDEPSO):
 	ln -s `readlink -f $(UTILSLOC)/lib/$@` $@
 
-tests: TransversityUnitTests.cxx $(TOBJH)
-	$(CXX) -o TransversityTests.exe $(CXXFLAGS) $(LDFLAGS) TransversityUnitTests.cxx TransversityUtils.so
+tests: TransversityUnitTests.cxx TransversityUtils.o
+	$(CXX) -o TransversityTests.exe $(CXXFLAGS) $(LDFLAGS) TransversityUnitTests.cxx TransversityUtils.o
 
-$(TARGET): $(TARGETSRC) $(TOBJSO) $(TOBJH) $(UTILSDEPSO)
-	$(CXX) -o $@ -I$(UTILSLOC) $(CXXFLAGS) $(LDFLAGS) $(TARGETSRC) $(TOBJSO) $(UTILSDEPSO)
+$(TARGET): $(TARGETSRC) $(TOBJO) $(UTILSDEPSO)
+	$(CXX) -o $@ -I$(UTILSLOC) $(CXXFLAGS) $(LDFLAGS) $(TARGETSRC) $(TOBJO) $(UTILSDEPSO)
 
-TransversityVariableObjects_dict.cxx: TransversityVariableObjects.hxx TransversityUtils.hxx
-	$(RCINT) -f $@ -c -p TransversityVariableObjects.hxx TransversityVariableObjects_linkdef.h
+TransversityVariableObjects_dict.o: TransversityVariableObjects.hxx TransversityVariableObjects_linkdef.h TransversityUtils.o
+	$(RCINT) -f TransversityVariableObjects_dict.cxx -c -p TransversityVariableObjects.hxx TransversityVariableObjects_linkdef.h
+	$(CXX) $(CXXFLAGS) -c TransversityVariableObjects_dict.cxx -o $@
 
-TransversityVariableObjects.so: TransversityVariableObjects.cxx TransversityVariableObjects_dict.cxx TransversityVariableObjects.hxx TransversityVariableObjects_linkdef.h TransversityUtils.hxx
-	$(CXX) $(CXXFLAGS) -shared TransversityVariableObjects.cxx TransversityVariableObjects_dict.cxx -o $@
+TransversityVariableObjects.o: TransversityVariableObjects.cxx TransversityVariableObjects.hxx TransversityUtils.o
+	$(CXX) $(CXXFLAGS) -c TransversityVariableObjects.cxx -o $@
 
-TransversityUtils.so: TransversityUtils.hxx
-	$(CXX) $(CXXFLAGS) TransversityUtils.cxx -shared -o $@
+TransversityUtils.o: TransversityUtils.cxx TransversityUtils.hxx
+	$(CXX) $(CXXFLAGS) -c TransversityUtils.cxx -o $@
 
 clean:
 	rm -rf $(TOBJDICTS)\
         $(TDICTHEADERS)\
-        $(TOBJSO)\
+        $(TOBJO)\
         $(UTILSDEPSO)\
         $(TARGET)\
         $(BDIR) \
