Adds Lite output mode. Adds full momenta info for final state protons and pions.
  Major Changes:
    - Adds four momenta output for all final state protons and charged pions.
      These are stored in index-synched per-dimension VL arrays for each
      of the two particle types.
    - Adds -L option which activates Lite output, this outputs using
      a cut down version of the TransversityVariables struct.

  Minor Changes:
    - Removes smearing.
    - Fixes an OBO error in the above threshold filling code.
    - Adds rescattering code variabes, currently only implemented for
      GENIE input files.

--- a/luke-contrib/transverse-variable-tree-generation/all/makefile
+++ b/luke-contrib/transverse-variable-tree-generation/all/makefile
@@ -24,9 +24,18 @@ ROOTLDFLAGS := `$(RC) --libs --glibs`
 CXXFLAGS := -fPIC $(ROOTCFLAGS) -g -std=c++11
 LDFLAGS := $(ROOTLDFLAGS) -Wl,-rpath=.
 
-.PHONY: all clean
+.PHONY: all wtests clean
 
-all: $(TARGET) tests
+all: $(TARGET)
+	mkdir -p $(BDIR) $(LDIR)
+	mv $(TARGET) $(BDIR)/
+	mv $(UTILSDEPSO) $(LDIR)/
+	@echo ""
+	@echo "*********************************************************************"
+	@echo "Success. Built ProcessRooTrackerToTransversityVariables."
+	@echo "*********************************************************************"
+
+wtests: $(TARGET) tests
 	./TransversityTests.exe
 	mkdir -p $(BDIR) $(LDIR)
 	mv $(TARGET) $(BDIR)/
@@ -35,6 +44,7 @@ all: $(TARGET) tests
 	@echo "*********************************************************************"
 	@echo "Success. Built ProcessRooTrackerToTransversityVariables."
 	@echo "*********************************************************************"
+
 
 $(UTILSDEPSO):
 	ln -s `readlink -f $(UTILSLOC)/lib/$@` $@
