Changes setups and makefiles to accomodate subdir structure changes.

--- a/luke-contrib/transverse-variable-tree-generation/makefile
+++ b/luke-contrib/transverse-variable-tree-generation/makefile
@@ -12,7 +12,7 @@ TDICTHEADERS := TransversityVariableObjects_dict.h
 TOBJO := $(TOBJS:.cxx=.o)
 TOBJO += TransversityVariableObjects_dict.o
 
-UTILSLOC=../../utils
+UTILSLOC=../utils
 UTILSDEPSO=libPureGenUtils.so
 
 TARGET := ProcessRooTrackerToTransversityVariables.exe
