That was a long HMB... Continues clean up. More to follow. ==========================================================
"Commit little and often they said, it will be easy they said"

Major Changes:
--------------

- Removes all plotting code from MakeSingleTransversePlots.cxx
- Starts making changes to remove specifics with regards to this being a
  generator comparison plotting framework.
- Adds a number of helper functions and new 'features' to PlottingAutoPlots
  - N.B. The Schema and the example_config are wildly out of date with regards
    to the current feature set.
- Adds the ability to be able to plot TH1*'s from external root files, rather
  than just the Cache file or from a loaded TTree.
- Removes all specifics from PlottingSelections. All selections are now read in
  from input XML.
- Adds the ability to describe TLegends and TLines from the Plotting XML.

This is about to undergo a major restructure. So I don't see the point in
writing detailed commit notes. It is not hugely near release yet. Apologies
future me, hopefully you wont need them.

--- a/luke-contrib/plotting/makefile
+++ b/luke-contrib/plotting/makefile
@@ -45,10 +45,10 @@ PlottingUtils.o: PlottingUtils.cxx PlottingUtils.hxx PlottingTypes.hxx
 PlottingIO.o: PlottingIO.cxx PlottingIO.hxx PlottingTypes.hxx PlottingUtils.hxx
 	$(CXX) $(CXXFLAGS) -c PlottingIO.cxx -o $@
 
-PlottingSelections.o: PlottingSelections.cxx PlottingSelections.hxx
+PlottingSelections.o: PlottingSelections.cxx PlottingSelections.hxx PlottingUtils.hxx
 	$(CXX) $(CXXFLAGS) -c PlottingSelections.cxx -o $@
 
-PlottingAutoPlots.o: PlottingAutoPlots.cxx PlottingAutoPlots.hxx
+PlottingAutoPlots.o: PlottingAutoPlots.cxx PlottingAutoPlots.hxx PlottingUtils.hxx
 	$(CXX) $(CXXFLAGS) -c PlottingAutoPlots.cxx -o $@
 
 style_Xianguo.o: style_Xianguo.cxx style_Xianguo.hxx
