Removes plotting and readds as submodule.
  - Adds HEADs of gibuu and neut.
  - Adds plotting submodule.
  - Updates makefile and setup accordingly.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "luke-contrib/NuTRAPAnalysis"]
 	path = luke-contrib/NuTRAPAnalysis
 	url = git@github.com:luketpickering/NuTRAPAnalysis.git
+[submodule "luke-contrib/plotting"]
+	path = luke-contrib/plotting
+	url = git@github.com:luketpickering/ROOTXMLPlot.git
