--- a/luke-contrib/makefile
+++ b/luke-contrib/makefile
@@ -1,11 +1,12 @@
 
 .PHONY: cpp11test.exe utils Neut2RooTracker\
- plotting ProcessRooTrackerToTransversityVariables\
+ plotting NuTRAPAnalysis\
  GiBUUToStdHep
 
-all: cpp11test.exe utils Neut2RooTracker\
-	ProcessRooTrackerToTransversityVariables\
-	GiBUUToStdHep
+all: cpp11test.exe Neut2RooTracker\
+	NuTRAPAnalysis\
+	GiBUUToStdHep\
+	plotting
 	@echo ""
 	@echo "*********************************************************************"
 	@echo "Success. Built all of Lukes PureGen code."
@@ -13,33 +14,30 @@ all: cpp11test.exe utils Neut2RooTracker\
 	@echo "LD_LIBRARY_PATH"
 	@echo "*********************************************************************"
 
-clean: utils_clean Neut2RooTracker_clean\
- ProcessRooTrackerToTransversityVariables_clean\
- GiBUUToStdHep_clean
+clean: Neut2RooTracker_clean\
+ NuTRAPAnalysis_clean\
+ GiBUUToStdHep_clean\
+ plotting_clean
 
 cpp11test.exe:
 	echo "int main(){}" > cpp11test.cxx
 	$(CXX) -std=c++11 cpp11test.cxx -o $@
 	rm cpp11test.{cxx,exe}
 
-utils:
-	cd utils && $(MAKE)
 Neut2RooTracker:
 	cd neut/neut2rootracker && $(MAKE)
 plotting:
-	cd plotting && $(MAKE)
-ProcessRooTrackerToTransversityVariables: utils
-	cd transverse-variable-tree-generation && $(MAKE)
-GiBUUToStdHep: utils
+	cd plotting/ROOTXMLPlot && $(MAKE)
+NuTRAPAnalysis:
+	cd NuTRAPAnalysis/NuTRAPAnalysis && $(MAKE)
+GiBUUToStdHep:
 	cd gibuu/GiBUUToStdHep && $(MAKE)
 
-utils_clean:
-	cd utils && $(MAKE) clean
 Neut2RooTracker_clean:
 	cd neut/neut2rootracker && $(MAKE) clean
 plotting_clean:
-	cd plotting && $(MAKE) clean
-ProcessRooTrackerToTransversityVariables_clean:
-	cd transverse-variable-tree-generation && $(MAKE) clean
+	cd plotting/ROOTXMLPlot && $(MAKE) clean
+NuTRAPAnalysis_clean:
+	cd NuTRAPAnalysis/NuTRAPAnalysis && $(MAKE) clean
 GiBUUToStdHep_clean:
 	cd gibuu/GiBUUToStdHep && $(MAKE) clean
