--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = git@github.com:luketpickering/NuTRAPAnalysis.git
 [submodule "luke-contrib/plotting"]
 	path = luke-contrib/plotting
-	url = git@ursaminorbeta.org.uk:luketpickering/ROOTXMLPlot.git
+	url = git@git.ursaminorbeta.org.uk:luketpickering/ROOTXMLPlot.git
